--- a/shortcuts/inview/index.html
+++ b/shortcuts/inview/index.html
@@ -89,17 +89,19 @@ var inview = new Waypoint.Inview({
 
 <h4 id="context-option">context</h4>
 
-<p>Default: `window`</p>
+<p>Default: `window`.</p>
 
 <p>Used for specifying a scrollable element other than the window that this Inview instance should act within. See the <a href="../../api/context-option">standard context option</a> for more information.</p>
 
 <h4 id="enabled-option"></h4>
 
-<p>Default: `true`</p>
+<p>Default: `true`.</p>
 
 <p>When set to false, all underlying Waypoint instances will start disabled. To enable the shortcut, you will need to call <a href="#enable-method">enable</a>.</a> See the <a href="../../api/enabled-option">standard enabled option</a> for more information.</p>
 
 <h4 id="horizontal-option">horizontal</h4>
+
+<p>Default: <code>false</code>.</p>
 
 <p>When true, callbacks will work in the same fashion as a standard horizontal waypoint, dealing with left/right scrolls and passing <code>'right'</code> or <code>'left'</code> in place of <code>'down'</code> and <code>'up'</code>. See the <a href="../../api/horizontal-option">standard horizontal option</a> for more information.</p>
 
