Update sticky documentation for 4.0

--- a/shortcuts/sticky-elements/index.html
+++ b/shortcuts/sticky-elements/index.html
@@ -76,7 +76,7 @@ var sticky = new Waypoint.Sticky({
 
 <p>Default: <code>'&lt;div class="sticky-wrapper" /&gt;'</code>.</p>
 
-<p>This is the string of HTML that will be wrapped around the target sticky element.</p>
+<p>This is the string of HTML that will be wrapped around the target sticky element. If this options is set to <code>false</code>, no wrapper will be created and the existing parent of the sticky element will be used as the wrapper.</p>
 
 <h3 id="sticky-destroy">sticky.destroy()</h3>
 
