--- a/shortcuts/inview/index.html
+++ b/shortcuts/inview/index.html
@@ -89,13 +89,13 @@ var inview = new Waypoint.Inview({
 
 <h4 id="context-option">context</h4>
 
-<p>Default: `window`.</p>
+<p>Default: <code>window</code>.</p>
 
 <p>Used for specifying a scrollable element other than the window that this Inview instance should act within. See the <a href="../../api/context-option">standard context option</a> for more information.</p>
 
 <h4 id="enabled-option"></h4>
 
-<p>Default: `true`.</p>
+<p>Default: <code>true</code>.</p>
 
 <p>When set to false, all underlying Waypoint instances will start disabled. To enable the shortcut, you will need to call <a href="#enable-method">enable</a>.</a> See the <a href="../../api/enabled-option">standard enabled option</a> for more information.</p>
 
