enable example uses correct element and method

--- a/shortcuts/inview/index.html
+++ b/shortcuts/inview/index.html
@@ -143,8 +143,8 @@ $('.disable-inview').on('click', function() {
 <p>Calling <code>enable</code> will re-enable triggering of the Inview shortcut's handlers if it was previously disabled through the disable method or disabled option.</p>
 
 {% highlight js %}
-$('.disable-inview').on('click', function() {
-  inview.disable()
+$('.enable-inview').on('click', function() {
+  inview.enable()
 })
 {% endhighlight %}
 
