--- a/test/fixtures/sticky.html
+++ b/test/fixtures/sticky.html
@@ -1,10 +1,12 @@
 <div class="wp-container">
   <div class="before"></div>
   <div class="sticky"></div>
+  <div class="triggerElement"></div>
 </div>
 
 <style type="text/css">
   .wp-container {
+    position: relative;
     height:3000px;
   }
 
@@ -14,5 +16,9 @@
 
   .sticky {
     height:50px;
+  }
+  .triggerElement {
+    position: absolute;
+    top: 1000px;
   }
 </style>
